# bevy_erosion

./: Cargo.toml  README.md
assets/: erosion.wgsl  pyramid_resample.wgsl  terrain.wgsl  terrain_extended.wgsl
examples/: demo.rs
src/: camera.rs  lib.rs  main.rs  sun.rs  terrain_pipeline.rs  ui.rs
